[tool.poetry]
name = "personal cli assistant"
version = "1.0"
description = "Helpful and simple CLI assistant for you rutine stuff"
authors = ["Nazar Chaban <134311145+Vivern0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.3"
prompt-toolkit = "^3.0.43"
prettytable = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
